exports[`no-selector-as-dom-name > invalid(1): element.classList.add(\".foo\"); 1`] = `

  1 | element.classList.add(".foo");

`;

exports[`no-selector-as-dom-name > invalid(1): element.classList.add(\".foo\"); 2`] = `

Message:
> 1 | element.classList.add(".foo");
    |                       ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.add("foo");

`;

exports[`no-selector-as-dom-name > invalid(10): element.classList.toggle(\".foo\"); 1`] = `

  1 | element.classList.toggle(".foo");

`;

exports[`no-selector-as-dom-name > invalid(10): element.classList.toggle(\".foo\"); 2`] = `

Message:
> 1 | element.classList.toggle(".foo");
    |                          ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.toggle("foo");

`;

exports[`no-selector-as-dom-name > invalid(11): element.classList.replace(\".old\", \"new\"); 1`] = `

  1 | element.classList.replace(".old", "new");

`;

exports[`no-selector-as-dom-name > invalid(11): element.classList.replace(\".old\", \"new\"); 2`] = `

Message:
> 1 | element.classList.replace(".old", "new");
    |                           ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.replace("old", "new");

`;

exports[`no-selector-as-dom-name > invalid(12): element.classList.replace(\"old\", \".new\"); 1`] = `

  1 | element.classList.replace("old", ".new");

`;

exports[`no-selector-as-dom-name > invalid(12): element.classList.replace(\"old\", \".new\"); 2`] = `

Message:
> 1 | element.classList.replace("old", ".new");
    |                                  ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.replace("old", "new");

`;

exports[`no-selector-as-dom-name > invalid(13): element.classList.add(\".foo\", \".bar\"); 1`] = `

  1 | element.classList.add(".foo", ".bar");

`;

exports[`no-selector-as-dom-name > invalid(13): element.classList.add(\".foo\", \".bar\"); 2`] = `

Message:
> 1 | element.classList.add(".foo", ".bar");
    |                       ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.add("foo", ".bar");

`;

exports[`no-selector-as-dom-name > invalid(13): element.classList.add(\".foo\", \".bar\"); 3`] = `

Message:
> 1 | element.classList.add(".foo", ".bar");
    |                               ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.add(".foo", "bar");

`;

exports[`no-selector-as-dom-name > invalid(14): element.classList.add(\`.foo\`); 1`] = `

  1 | element.classList.add(\`.foo\`);

`;

exports[`no-selector-as-dom-name > invalid(14): element.classList.add(\`.foo\`); 2`] = `

Message:
> 1 | element.classList.add(\`.foo\`);
    |                       ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.add(\`foo\`);

`;

exports[`no-selector-as-dom-name > invalid(15): element.classList.add(\`.\${className}\`); 1`] = `

  1 | element.classList.add(\`.\${className}\`);

`;

exports[`no-selector-as-dom-name > invalid(15): element.classList.add(\`.\${className}\`); 2`] = `

Message:
> 1 | element.classList.add(\`.\${className}\`);
    |                       ^^^^^^^^^^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.add(\`\${className}\`);

`;

exports[`no-selector-as-dom-name > invalid(16): element.classList.add(\`#\${className}\`); 1`] = `

  1 | element.classList.add(\`#\${className}\`);

`;

exports[`no-selector-as-dom-name > invalid(16): element.classList.add(\`#\${className}\`); 2`] = `

Message:
> 1 | element.classList.add(\`#\${className}\`);
    |                       ^^^^^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(17): element.classList.add(\`.\${className}.bar\`); 1`] = `

  1 | element.classList.add(\`.\${className}.bar\`);

`;

exports[`no-selector-as-dom-name > invalid(17): element.classList.add(\`.\${className}.bar\`); 2`] = `

Message:
> 1 | element.classList.add(\`.\${className}.bar\`);
    |                       ^^^^^^^^^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(18): element.classList.add(\`.foo\${suffix}\`); 1`] = `

  1 | element.classList.add(\`.foo\${suffix}\`);

`;

exports[`no-selector-as-dom-name > invalid(18): element.classList.add(\`.foo\${suffix}\`); 2`] = `

Message:
> 1 | element.classList.add(\`.foo\${suffix}\`);
    |                       ^^^^^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(19): element.classList.add(\".foo\" as string); 1`] = `

  1 | element.classList.add(".foo" as string);

`;

exports[`no-selector-as-dom-name > invalid(19): element.classList.add(\".foo\" as string); 2`] = `

Message:
> 1 | element.classList.add(".foo" as string);
    |                       ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.add("foo" as string);

`;

exports[`no-selector-as-dom-name > invalid(2): element.classList.add((\".foo\")); 1`] = `

  1 | element.classList.add((".foo"));

`;

exports[`no-selector-as-dom-name > invalid(2): element.classList.add((\".foo\")); 2`] = `

Message:
> 1 | element.classList.add((".foo"));
    |                        ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.add(("foo"));

`;

exports[`no-selector-as-dom-name > invalid(20): element.classList.replace(\"old\", \".new\" as string); 1`] = `

  1 | element.classList.replace("old", ".new" as string);

`;

exports[`no-selector-as-dom-name > invalid(20): element.classList.replace(\"old\", \".new\" as string); 2`] = `

Message:
> 1 | element.classList.replace("old", ".new" as string);
    |                                  ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.replace("old", "new" as string);

`;

exports[`no-selector-as-dom-name > invalid(21): element.classList.add(\".foo\"!); 1`] = `

  1 | element.classList.add(".foo"!);

`;

exports[`no-selector-as-dom-name > invalid(21): element.classList.add(\".foo\"!); 2`] = `

Message:
> 1 | element.classList.add(".foo"!);
    |                       ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.add("foo"!);

`;

exports[`no-selector-as-dom-name > invalid(22): element.classList.add(\".foo\" satisfies string); 1`] = `

  1 | element.classList.add(".foo" satisfies string);

`;

exports[`no-selector-as-dom-name > invalid(22): element.classList.add(\".foo\" satisfies string); 2`] = `

Message:
> 1 | element.classList.add(".foo" satisfies string);
    |                       ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.add("foo" satisfies string);

`;

exports[`no-selector-as-dom-name > invalid(23): document.getElementsByClassName(<string>\".foo\"); 1`] = `

  1 | document.getElementsByClassName(<string>".foo");

`;

exports[`no-selector-as-dom-name > invalid(23): document.getElementsByClassName(<string>\".foo\"); 2`] = `

Message:
> 1 | document.getElementsByClassName(<string>".foo");
    |                                         ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | document.getElementsByClassName(<string>"foo");

`;

exports[`no-selector-as-dom-name > invalid(24): document.getElementsByClassName(\".foo\"); 1`] = `

  1 | document.getElementsByClassName(".foo");

`;

exports[`no-selector-as-dom-name > invalid(24): document.getElementsByClassName(\".foo\"); 2`] = `

Message:
> 1 | document.getElementsByClassName(".foo");
    |                                 ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | document.getElementsByClassName("foo");

`;

exports[`no-selector-as-dom-name > invalid(25): document.getElementsByClassName(\"#foo\"); 1`] = `

  1 | document.getElementsByClassName("#foo");

`;

exports[`no-selector-as-dom-name > invalid(25): document.getElementsByClassName(\"#foo\"); 2`] = `

Message:
> 1 | document.getElementsByClassName("#foo");
    |                                 ^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(26): document.getElementsByClassName(\`.\${className}\`); 1`] = `

  1 | document.getElementsByClassName(\`.\${className}\`);

`;

exports[`no-selector-as-dom-name > invalid(26): document.getElementsByClassName(\`.\${className}\`); 2`] = `

Message:
> 1 | document.getElementsByClassName(\`.\${className}\`);
    |                                 ^^^^^^^^^^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | document.getElementsByClassName(\`\${className}\`);

`;

exports[`no-selector-as-dom-name > invalid(27): document.getElementsByClassName(\`#\${className}\`); 1`] = `

  1 | document.getElementsByClassName(\`#\${className}\`);

`;

exports[`no-selector-as-dom-name > invalid(27): document.getElementsByClassName(\`#\${className}\`); 2`] = `

Message:
> 1 | document.getElementsByClassName(\`#\${className}\`);
    |                                 ^^^^^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(28): document?.getElementsByClassName(\".foo\"); 1`] = `

  1 | document?.getElementsByClassName(".foo");

`;

exports[`no-selector-as-dom-name > invalid(28): document?.getElementsByClassName(\".foo\"); 2`] = `

Message:
> 1 | document?.getElementsByClassName(".foo");
    |                                  ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | document?.getElementsByClassName("foo");

`;

exports[`no-selector-as-dom-name > invalid(29): document.getElementsByClassName?.(\".foo\"); 1`] = `

  1 | document.getElementsByClassName?.(".foo");

`;

exports[`no-selector-as-dom-name > invalid(29): document.getElementsByClassName?.(\".foo\"); 2`] = `

Message:
> 1 | document.getElementsByClassName?.(".foo");
    |                                   ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | document.getElementsByClassName?.("foo");

`;

exports[`no-selector-as-dom-name > invalid(3): element.classList.add('.foo'); 1`] = `

  1 | element.classList.add('.foo');

`;

exports[`no-selector-as-dom-name > invalid(3): element.classList.add('.foo'); 2`] = `

Message:
> 1 | element.classList.add('.foo');
    |                       ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.add('foo');

`;

exports[`no-selector-as-dom-name > invalid(30): element.getElementsByClassName(\".foo\"); 1`] = `

  1 | element.getElementsByClassName(".foo");

`;

exports[`no-selector-as-dom-name > invalid(30): element.getElementsByClassName(\".foo\"); 2`] = `

Message:
> 1 | element.getElementsByClassName(".foo");
    |                                ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.getElementsByClassName("foo");

`;

exports[`no-selector-as-dom-name > invalid(31): element.classList.add(\"\\u002efoo\"); 1`] = `

  1 | element.classList.add("\\u002efoo");

`;

exports[`no-selector-as-dom-name > invalid(31): element.classList.add(\"\\u002efoo\"); 2`] = `

Message:
> 1 | element.classList.add("\\u002efoo");
    |                       ^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(32): element.classList.add(\`\\u002efoo\`); 1`] = `

  1 | element.classList.add(\`\\u002efoo\`);

`;

exports[`no-selector-as-dom-name > invalid(32): element.classList.add(\`\\u002efoo\`); 2`] = `

Message:
> 1 | element.classList.add(\`\\u002efoo\`);
    |                       ^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(33): element.classList.add(\".foo.bar\"); 1`] = `

  1 | element.classList.add(".foo.bar");

`;

exports[`no-selector-as-dom-name > invalid(33): element.classList.add(\".foo.bar\"); 2`] = `

Message:
> 1 | element.classList.add(".foo.bar");
    |                       ^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(34): element.classList.add(\".foo .bar\"); 1`] = `

  1 | element.classList.add(".foo .bar");

`;

exports[`no-selector-as-dom-name > invalid(34): element.classList.add(\".foo .bar\"); 2`] = `

Message:
> 1 | element.classList.add(".foo .bar");
    |                       ^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(35): element.classList.add(\".foo, .bar\"); 1`] = `

  1 | element.classList.add(".foo, .bar");

`;

exports[`no-selector-as-dom-name > invalid(35): element.classList.add(\".foo, .bar\"); 2`] = `

Message:
> 1 | element.classList.add(".foo, .bar");
    |                       ^^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(36): element.classList.add(\".foo:hover\"); 1`] = `

  1 | element.classList.add(".foo:hover");

`;

exports[`no-selector-as-dom-name > invalid(36): element.classList.add(\".foo:hover\"); 2`] = `

Message:
> 1 | element.classList.add(".foo:hover");
    |                       ^^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(37): element.classList.add(\".123\"); 1`] = `

  1 | element.classList.add(".123");

`;

exports[`no-selector-as-dom-name > invalid(37): element.classList.add(\".123\"); 2`] = `

Message:
> 1 | element.classList.add(".123");
    |                       ^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(38): element.classList.add(\".foo\", \".bar.baz\"); 1`] = `

  1 | element.classList.add(".foo", ".bar.baz");

`;

exports[`no-selector-as-dom-name > invalid(38): element.classList.add(\".foo\", \".bar.baz\"); 2`] = `

Message:
> 1 | element.classList.add(".foo", ".bar.baz");
    |                       ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.add("foo", ".bar.baz");

`;

exports[`no-selector-as-dom-name > invalid(38): element.classList.add(\".foo\", \".bar.baz\"); 3`] = `

Message:
> 1 | element.classList.add(".foo", ".bar.baz");
    |                               ^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(39): document.getElementsByClassName(\".foo.bar\"); 1`] = `

  1 | document.getElementsByClassName(".foo.bar");

`;

exports[`no-selector-as-dom-name > invalid(39): document.getElementsByClassName(\".foo.bar\"); 2`] = `

Message:
> 1 | document.getElementsByClassName(".foo.bar");
    |                                 ^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(4): element.classList.add(\"#foo\"); 1`] = `

  1 | element.classList.add("#foo");

`;

exports[`no-selector-as-dom-name > invalid(4): element.classList.add(\"#foo\"); 2`] = `

Message:
> 1 | element.classList.add("#foo");
    |                       ^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(40): document.getElementsByClassName(\".foo .bar\"); 1`] = `

  1 | document.getElementsByClassName(".foo .bar");

`;

exports[`no-selector-as-dom-name > invalid(40): document.getElementsByClassName(\".foo .bar\"); 2`] = `

Message:
> 1 | document.getElementsByClassName(".foo .bar");
    |                                 ^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(41): document.getElementById(\"#foo\"); 1`] = `

  1 | document.getElementById("#foo");

`;

exports[`no-selector-as-dom-name > invalid(41): document.getElementById(\"#foo\"); 2`] = `

Message:
> 1 | document.getElementById("#foo");
    |                         ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | document.getElementById("foo");

`;

exports[`no-selector-as-dom-name > invalid(42): document.getElementById((\"#foo\")); 1`] = `

  1 | document.getElementById(("#foo"));

`;

exports[`no-selector-as-dom-name > invalid(42): document.getElementById((\"#foo\")); 2`] = `

Message:
> 1 | document.getElementById(("#foo"));
    |                          ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | document.getElementById(("foo"));

`;

exports[`no-selector-as-dom-name > invalid(43): document.getElementById(\".foo\"); 1`] = `

  1 | document.getElementById(".foo");

`;

exports[`no-selector-as-dom-name > invalid(43): document.getElementById(\".foo\"); 2`] = `

Message:
> 1 | document.getElementById(".foo");
    |                         ^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(44): document.getElementById('#foo'); 1`] = `

  1 | document.getElementById('#foo');

`;

exports[`no-selector-as-dom-name > invalid(44): document.getElementById('#foo'); 2`] = `

Message:
> 1 | document.getElementById('#foo');
    |                         ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | document.getElementById('foo');

`;

exports[`no-selector-as-dom-name > invalid(45): document?.getElementById(\"#foo\"); 1`] = `

  1 | document?.getElementById("#foo");

`;

exports[`no-selector-as-dom-name > invalid(45): document?.getElementById(\"#foo\"); 2`] = `

Message:
> 1 | document?.getElementById("#foo");
    |                          ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | document?.getElementById("foo");

`;

exports[`no-selector-as-dom-name > invalid(46): document.getElementById?.(\"#foo\"); 1`] = `

  1 | document.getElementById?.("#foo");

`;

exports[`no-selector-as-dom-name > invalid(46): document.getElementById?.(\"#foo\"); 2`] = `

Message:
> 1 | document.getElementById?.("#foo");
    |                           ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | document.getElementById?.("foo");

`;

exports[`no-selector-as-dom-name > invalid(47): document.getElementById(\`#foo\`); 1`] = `

  1 | document.getElementById(\`#foo\`);

`;

exports[`no-selector-as-dom-name > invalid(47): document.getElementById(\`#foo\`); 2`] = `

Message:
> 1 | document.getElementById(\`#foo\`);
    |                         ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | document.getElementById(\`foo\`);

`;

exports[`no-selector-as-dom-name > invalid(48): document.getElementById(\`#\${id}\`); 1`] = `

  1 | document.getElementById(\`#\${id}\`);

`;

exports[`no-selector-as-dom-name > invalid(48): document.getElementById(\`#\${id}\`); 2`] = `

Message:
> 1 | document.getElementById(\`#\${id}\`);
    |                         ^^^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | document.getElementById(\`\${id}\`);

`;

exports[`no-selector-as-dom-name > invalid(49): document.getElementById(\`.\${id}\`); 1`] = `

  1 | document.getElementById(\`.\${id}\`);

`;

exports[`no-selector-as-dom-name > invalid(49): document.getElementById(\`.\${id}\`); 2`] = `

Message:
> 1 | document.getElementById(\`.\${id}\`);
    |                         ^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(5): element?.classList.add(\".foo\"); 1`] = `

  1 | element?.classList.add(".foo");

`;

exports[`no-selector-as-dom-name > invalid(5): element?.classList.add(\".foo\"); 2`] = `

Message:
> 1 | element?.classList.add(".foo");
    |                        ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element?.classList.add("foo");

`;

exports[`no-selector-as-dom-name > invalid(50): document.getElementById(\`#\${id}:hover\`); 1`] = `

  1 | document.getElementById(\`#\${id}:hover\`);

`;

exports[`no-selector-as-dom-name > invalid(50): document.getElementById(\`#\${id}:hover\`); 2`] = `

Message:
> 1 | document.getElementById(\`#\${id}:hover\`);
    |                         ^^^^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(51): document.getElementById(\"#foo\" as string); 1`] = `

  1 | document.getElementById("#foo" as string);

`;

exports[`no-selector-as-dom-name > invalid(51): document.getElementById(\"#foo\" as string); 2`] = `

Message:
> 1 | document.getElementById("#foo" as string);
    |                         ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | document.getElementById("foo" as string);

`;

exports[`no-selector-as-dom-name > invalid(52): document.getElementById(\"\\u0023foo\"); 1`] = `

  1 | document.getElementById("\\u0023foo");

`;

exports[`no-selector-as-dom-name > invalid(52): document.getElementById(\"\\u0023foo\"); 2`] = `

Message:
> 1 | document.getElementById("\\u0023foo");
    |                         ^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(53): document.getElementById(\`\\u0023foo\`); 1`] = `

  1 | document.getElementById(\`\\u0023foo\`);

`;

exports[`no-selector-as-dom-name > invalid(53): document.getElementById(\`\\u0023foo\`); 2`] = `

Message:
> 1 | document.getElementById(\`\\u0023foo\`);
    |                         ^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(54): document.getElementById(\"#foo.bar\"); 1`] = `

  1 | document.getElementById("#foo.bar");

`;

exports[`no-selector-as-dom-name > invalid(54): document.getElementById(\"#foo.bar\"); 2`] = `

Message:
> 1 | document.getElementById("#foo.bar");
    |                         ^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(55): document.getElementById(\"#foo .bar\"); 1`] = `

  1 | document.getElementById("#foo .bar");

`;

exports[`no-selector-as-dom-name > invalid(55): document.getElementById(\"#foo .bar\"); 2`] = `

Message:
> 1 | document.getElementById("#foo .bar");
    |                         ^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(56): document.getElementById(\"#foo, #bar\"); 1`] = `

  1 | document.getElementById("#foo, #bar");

`;

exports[`no-selector-as-dom-name > invalid(56): document.getElementById(\"#foo, #bar\"); 2`] = `

Message:
> 1 | document.getElementById("#foo, #bar");
    |                         ^^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(57): document.getElementById(\"#foo:hover\"); 1`] = `

  1 | document.getElementById("#foo:hover");

`;

exports[`no-selector-as-dom-name > invalid(57): document.getElementById(\"#foo:hover\"); 2`] = `

Message:
> 1 | document.getElementById("#foo:hover");
    |                         ^^^^^^^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(58): document.getElementById(\"#123\"); 1`] = `

  1 | document.getElementById("#123");

`;

exports[`no-selector-as-dom-name > invalid(58): document.getElementById(\"#123\"); 2`] = `

Message:
> 1 | document.getElementById("#123");
    |                         ^^^^^^ Do not use selector syntax in DOM names.

`;

exports[`no-selector-as-dom-name > invalid(6): element.classList?.add(\".foo\"); 1`] = `

  1 | element.classList?.add(".foo");

`;

exports[`no-selector-as-dom-name > invalid(6): element.classList?.add(\".foo\"); 2`] = `

Message:
> 1 | element.classList?.add(".foo");
    |                        ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList?.add("foo");

`;

exports[`no-selector-as-dom-name > invalid(7): element.classList.add?.(\".foo\"); 1`] = `

  1 | element.classList.add?.(".foo");

`;

exports[`no-selector-as-dom-name > invalid(7): element.classList.add?.(\".foo\"); 2`] = `

Message:
> 1 | element.classList.add?.(".foo");
    |                         ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.add?.("foo");

`;

exports[`no-selector-as-dom-name > invalid(8): element.classList.remove(\".foo\"); 1`] = `

  1 | element.classList.remove(".foo");

`;

exports[`no-selector-as-dom-name > invalid(8): element.classList.remove(\".foo\"); 2`] = `

Message:
> 1 | element.classList.remove(".foo");
    |                          ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.remove("foo");

`;

exports[`no-selector-as-dom-name > invalid(9): element.classList.contains(\".foo\"); 1`] = `

  1 | element.classList.contains(".foo");

`;

exports[`no-selector-as-dom-name > invalid(9): element.classList.contains(\".foo\"); 2`] = `

Message:
> 1 | element.classList.contains(".foo");
    |                            ^^^^^^ Do not use selector syntax in DOM names.

Output:
  1 | element.classList.contains("foo");

`;
